platforms/webhook/manifests/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: deployment-validation-webhook
webhooks:
  - name: deployment-validation-webhook.deployment-validate.svc
    sideEffects: None
    admissionReviewVersions: ["v1"]
    rules:
      - apiGroups: ["apps"]
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
    clientConfig:
      service:
        name: deployment-validation-webhook
        namespace: deployment-validate
        port: 4430
        path: "/validate/deployment"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURpVENDQW5HZ0F3SUJBZ0lVRFdCaWhlTmp4R01tZlZqeEc1cjdkMTFiendJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1FERStNRHdHQTFVRUF3dzFaR1Z3Ykc5NWJXVnVkQzEyWVd4cFpHRjBhVzl1TFhkbFltaHZiMnN1WkdWdwpiRzk1YldWdWRDMTJZV3hwWkdGMFpTNXpkbU13SGhjTk1qTXdOekUyTURBeE16STFXaGNOTWpRd056RTFNREF4Ck16STFXakJBTVQ0d1BBWURWUVFERERWa1pYQnNiM2x0Wlc1MExYWmhiR2xrWVhScGIyNHRkMlZpYUc5dmF5NWsKWlhCc2IzbHRaVzUwTFhaaGJHbGtZWFJsTG5OMll6Q0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQwpBUW9DZ2dFQkFN [...]
    namespaceSelector:
      matchLabels:
        validate-namespace: test
